- merged dev and fixed merge conflicts